Fix layout bug in ideas list

--- a/static-src/scss/components/_ideas.scss
+++ b/static-src/scss/components/_ideas.scss
@@ -61,6 +61,10 @@
             @include rem(font-size, 11px);
         }
     }
+
+    .icon-list span {
+        display: none;
+    }
 }
 
 .ideas-list {
